--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
           const role = data.user.role;
 
           if (role === 'client') {
-            window.location.href = 'home.html';
+            window.location.href = 'client_home.html';
           } else if (role === 'owner') {
             window.location.href = 'owner_dashboard.html';
           } else if (role === 'admin') {
