reset password update

--- a/reset_password.html
+++ b/reset_password.html
@@ -58,8 +58,8 @@
   <div class="container">
     <h2>Reset Your Password</h2>
     <form id="resetForm">
-      <input type="password" id="newPassword" placeholder="New Password" required />
-      <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
+      <input type="password" id="newPassword" placeholder="New Password" required style="width: 370px; height: 20px;"/>
+      <input type="password" id="confirmPassword" placeholder="Confirm Password" required style="width: 370px; height: 20px;"/>
       <button type="submit" class="reset-btn">Reset Password</button>
     </form>
     <div id="response-message"></div>
