--- a/owner_Dashboard.html
+++ b/owner_Dashboard.html
@@ -209,12 +209,43 @@
       loadBookings();
     }
 
-    function loadReviews() {
-      document.getElementById('dashboard-content').innerHTML = `
-        <h2 class="text-xl font-semibold mb-4">Reviews</h2>
-        <p class="text-gray-500">Coming soon: You'll be able to view client reviews on your venues.</p>
-      `;
+    async function loadReviews() {
+  document.getElementById('dashboard-content').innerHTML = `<p>Loading reviews...</p>`;
+  try {
+    const res = await fetch('http://localhost:5000/api/owner/reviews', {
+      headers: { 'Authorization': `Bearer ${token}` }
+    });
+
+    const reviews = await res.json();
+
+    if (!Array.isArray(reviews)) {
+      document.getElementById('dashboard-content').innerHTML = `<p class="text-red-600">Error loading reviews.</p>`;
+      return;
     }
+
+    const html = `
+      <h2 class="text-xl font-semibold mb-4">Client Reviews</h2>
+      <div class="space-y-4">
+        ${reviews.length === 0
+          ? '<p class="text-gray-500">No reviews found.</p>'
+          : reviews.map(r => `
+            <div class="bg-white p-4 rounded shadow">
+              <p><strong>Venue:</strong> ${r.Venue?.name || 'Unknown Venue'}</p>
+              <p><strong>Rating:</strong> ${'⭐'.repeat(r.rating)} (${r.rating}/5)</p>
+              <p><strong>Comment:</strong> ${r.comment || 'No comment provided.'}</p>
+              <p class="text-sm text-gray-500">Reviewed on: ${new Date(r.createdAt).toLocaleDateString()}</p>
+            </div>
+          `).join('')}
+      </div>
+    `;
+    document.getElementById('dashboard-content').innerHTML = html;
+
+  } catch (err) {
+    console.error('Error loading reviews:', err);
+    document.getElementById('dashboard-content').innerHTML = `<p class="text-red-600">Failed to load reviews.</p>`;
+  }
+}
+
   </script>
 
 </body>
