--- a/client_profile.html
+++ b/client_profile.html
@@ -136,7 +136,7 @@
   <a href="client_bookings.html">My Bookings</a>
   <a href="client_reviews.html">My Reviews</a>
   <a href="notifications.html">Notifications</a>
-    <button class="logout" onclick="location.href='index.html'">Logout</button>
+    <button class="logout" onclick="location.href='home.html'">Logout</button>
 </div>
 
 
@@ -167,7 +167,7 @@
 
 <div style="margin-top: 20px;">
 <h1>Welcome to Your Profile</h1>
-<p>This is your main content area.</p>
+<p>Click on any of the tabs in the sidebar to get started</p>
 </div>
 
 </div>
