--- a/client_reviews.html
+++ b/client_reviews.html
@@ -135,7 +135,7 @@
   <h2><a href="client_home.html">VENUE~WISE</a></h2>
   <a href="client_bookings.html">My Bookings</a>
   <a href="client_reviews.html">My Reviews</a>
-    <button class="logout" onclick="location.href='index.html'">Logout</button>
+    <button class="logout" onclick="location.href='home.html'">Logout</button>
 </div>
 
 
