--- a/owner_Dashboard.html
+++ b/owner_Dashboard.html
@@ -17,6 +17,8 @@
       <button onclick="loadSection('manageVenues')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Manage Venues</button>
       <button onclick="loadSection('bookings')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Bookings</button>
       <button onclick="loadSection('reviews')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Reviews</button>
+      <button onclick="loadBookingStats('monthly')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Stats (Monthly)</button>
+      <button onclick="loadBookingStats('weekly')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Stats (Weekly)</button>
     </nav>
     <div class="mt-auto pt-6 border-t border-orange-400">
       <p class="text-sm mb-2">Logged in as <span class="font-semibold">Venue Owner</span></p>
@@ -288,6 +290,43 @@ function renderCard(label, value, color) {
   `;
   fetchDashboardSummary();
   }   
+async function loadBookingStats(range = 'monthly') {
+  const res = await fetch(`http://localhost:5000/api/owner/stats/bookings?range=${range}`, {
+    headers: { Authorization: `Bearer ${token}` }
+  });
+  const { data, range: usedRange } = await res.json();
+
+  const html = `
+    <h2 class="text-xl font-bold mb-4">Booking Summary (${usedRange})</h2>
+    <table class="w-full table-auto bg-white shadow rounded">
+      <thead class="bg-orange-600 text-white">
+        <tr>
+          <th class="px-4 py-2">Period</th>
+          <th class="px-4 py-2">Total</th>
+          <th class="px-4 py-2">Approved</th>
+          <th class="px-4 py-2">Pending</th>
+          <th class="px-4 py-2">Rejected</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${Object.entries(data).map(([key, stats]) => `
+          <tr class="border-t">
+            <td class="px-4 py-2">${key}</td>
+            <td class="px-4 py-2">${stats.total}</td>
+            <td class="px-4 py-2">${stats.approved}</td>
+            <td class="px-4 py-2">${stats.pending}</td>
+            <td class="px-4 py-2">${stats.rejected}</td>
+          </tr>
+        `).join('')}
+      </tbody>
+    </table>
+    <button onclick="window.print()" class="mt-4 bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">
+      Print Summary
+    </button>
+  `;
+
+  document.getElementById('dashboard-content').innerHTML = html;
+}
 
   </script>
 
