--- a/owner_Dashboard.html
+++ b/owner_Dashboard.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Venue Owner Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
 </head>
 <body class="flex bg-gray-100 min-h-screen text-gray-800">
 
@@ -19,6 +21,7 @@
       <button onclick="loadSection('reviews')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Reviews</button>
       <button onclick="loadBookingStats('monthly')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Stats (Monthly)</button>
       <button onclick="loadBookingStats('weekly')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Stats (Weekly)</button>
+      <button onclick="loadBookingCalendar()" class="hover:bg-orange-500 px-3 py-2 rounded text-left">Booking Calendar</button>
     </nav>
     <div class="mt-auto pt-6 border-t border-orange-400">
       <p class="text-sm mb-2">Logged in as <span class="font-semibold">Venue Owner</span></p>
@@ -327,6 +330,48 @@ async function loadBookingStats(range = 'monthly') {
 
   document.getElementById('dashboard-content').innerHTML = html;
 }
+  async function loadBookingCalendar() {
+  document.getElementById('dashboard-content').innerHTML = `
+    <h2 class="text-xl font-semibold mb-4">Bookings Calendar</h2>
+    <div id="calendar" class="bg-white p-4 rounded shadow h-[650px]"></div>
+  `;
+
+  const res = await fetch(`http://localhost:5000/api/owner/bookings`, {
+    headers: { Authorization: `Bearer ${token}` }
+  });
+
+  const bookings = await res.json();
+
+  const calendarEvents = bookings.map(b => ({
+    title: `${b.Venue?.name || 'Venue'} - ${b.User?.username || 'Client'}`,
+    start: b.eventDate,
+    color: b.status === 'approved' ? 'green' : b.status === 'rejected' ? 'red' : 'orange'
+  }));
+
+  // Delay to ensure DOM is rendered
+  setTimeout(() => {
+    const calendarEl = document.getElementById('calendar');
+
+    // 🔍 Add your console.log() statements here:
+    console.log("✅ Calendar element found:", calendarEl);
+    console.log("📅 Events to render:", calendarEvents);
+
+    const calendar = new FullCalendar.Calendar(calendarEl, {
+      initialView: 'dayGridMonth',
+      headerToolbar: {
+        start: 'title',
+        center: '',
+        end: 'prev,next today'
+      },
+      height: 600,
+      events: calendarEvents
+    });
+
+    calendar.render();
+  }, 0);
+}
+
+
 
   </script>
 
